init rtl editen

--- a/scss/navs/_topbar.scss
+++ b/scss/navs/_topbar.scss
@@ -96,7 +96,8 @@
       position: relative;
       .dropdown-menu {
         width: auto;
-        right: 0;
+        right: auto;
+        left: 0;
       }
     }
     .dropdown-list {
