--- a/scss/utilities/_border.scss
+++ b/scss/utilities/_border.scss
@@ -1,21 +1,21 @@
-.border-left-primary {
-  border-left: .25rem solid $primary !important;
+.border-right-primary {
+  border-right: .25rem solid $primary !important;
 }
 
-.border-left-success {
-  border-left: .25rem solid $success !important;
+.border-right-success {
+  border-right: .25rem solid $success !important;
 }
 
-.border-left-info {
-  border-left: .25rem solid $info !important;
+.border-right-info {
+  border-right: .25rem solid $info !important;
 }
 
-.border-left-warning {
-  border-left: .25rem solid $warning !important;
+.border-right-warning {
+  border-right: .25rem solid $warning !important;
 }
 
-.border-left-danger {
-  border-left: .25rem solid $danger !important;
+.border-right-danger {
+  border-right: .25rem solid $danger !important;
 }
 
 .border-bottom-primary {
