--- a/scss/_cards.scss
+++ b/scss/_cards.scss
@@ -17,7 +17,8 @@
     padding: 0.75rem 3.25rem 0.75rem 1.25rem;
     &::after {
       position: absolute;
-      right: 0;
+      left: 0;
+      margin-left: 1rem;
       top: 0;
       padding-right: 1.725rem;
       line-height: 51px;
@@ -29,7 +30,7 @@
     &.collapsed {
       border-radius: $card-border-radius;
       &::after {
-        content: '\f105';
+        content: '\f104';
       }
     }
   }
