--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -6,6 +6,7 @@ html {
 }
 
 body {
+  font-family: Samim;
   height: 100%;
 }
 
@@ -13,6 +14,24 @@ a {
   &:focus {
     outline: none;
   }
+}
+//samim font
+@font-face {
+  font-family: Samim;
+  src: url('Samim.eot');
+  src: url('Samim.eot?#iefix') format('embedded-opentype'),
+       url('Samim.woff') format('woff'),
+       url('Samim.ttf') format('truetype');
+  font-weight: normal;
+}
+
+@font-face {
+  font-family: Samim;
+  src: url('Samim-Bold.eot');
+  src: url('Samim-Bold.eot?#iefix') format('embedded-opentype'),
+       url('Samim-Bold.woff') format('woff'),
+       url('Samim-Bold.ttf') format('truetype');
+  font-weight: bold;
 }
 
 // Main page wrapper
@@ -38,7 +57,7 @@ a {
 // Scroll to top button
 .scroll-to-top {
   position: fixed;
-  right: 1rem;
+  left: 1rem;
   bottom: 1rem;
   display: none;
   width: 2.75rem;
@@ -57,4 +76,9 @@ a {
   i {
     font-weight: 800;
   }
+}
+// rtl ver
+.rtl .custom-control-label::after, .rtl .custom-control-label::before, [dir=rtl] .custom-control-label::after, [dir=rtl] .custom-control-label::before {
+  left: inherit;
+  right: -1.5rem;
 }
