--- a/css/sb-admin-2.css
+++ b/css/sb-admin-2.css
@@ -12814,7 +12814,6 @@ a:focus {
 .sidebar.toggled #sidebarToggle::after {
   content: '\f104';
   font-family: 'Font Awesome 5 Free';
-  margin-left: 0.25rem;
 }
 
 .sidebar .sidebar-brand {
@@ -13348,133 +13347,133 @@ form.user .btn-user {
 
 @-webkit-keyframes noise-anim {
   0% {
-    clip: rect(11px, 9999px, 32px, 0);
+    clip: rect(37px, 9999px, 6px, 0);
   }
   5% {
-    clip: rect(48px, 9999px, 15px, 0);
+    clip: rect(50px, 9999px, 10px, 0);
   }
   10% {
-    clip: rect(89px, 9999px, 61px, 0);
+    clip: rect(32px, 9999px, 14px, 0);
   }
   15% {
-    clip: rect(87px, 9999px, 46px, 0);
+    clip: rect(71px, 9999px, 89px, 0);
   }
   20% {
-    clip: rect(96px, 9999px, 30px, 0);
+    clip: rect(31px, 9999px, 49px, 0);
   }
   25% {
-    clip: rect(89px, 9999px, 19px, 0);
+    clip: rect(43px, 9999px, 43px, 0);
   }
   30% {
-    clip: rect(6px, 9999px, 16px, 0);
+    clip: rect(45px, 9999px, 74px, 0);
   }
   35% {
-    clip: rect(30px, 9999px, 31px, 0);
+    clip: rect(28px, 9999px, 98px, 0);
   }
   40% {
-    clip: rect(88px, 9999px, 57px, 0);
+    clip: rect(89px, 9999px, 50px, 0);
   }
   45% {
-    clip: rect(95px, 9999px, 33px, 0);
+    clip: rect(78px, 9999px, 28px, 0);
   }
   50% {
-    clip: rect(93px, 9999px, 57px, 0);
+    clip: rect(16px, 9999px, 3px, 0);
   }
   55% {
-    clip: rect(56px, 9999px, 47px, 0);
+    clip: rect(87px, 9999px, 90px, 0);
   }
   60% {
-    clip: rect(100px, 9999px, 92px, 0);
+    clip: rect(64px, 9999px, 19px, 0);
   }
   65% {
-    clip: rect(88px, 9999px, 16px, 0);
+    clip: rect(60px, 9999px, 53px, 0);
   }
   70% {
-    clip: rect(46px, 9999px, 3px, 0);
+    clip: rect(23px, 9999px, 51px, 0);
   }
   75% {
-    clip: rect(99px, 9999px, 40px, 0);
+    clip: rect(43px, 9999px, 61px, 0);
   }
   80% {
-    clip: rect(9px, 9999px, 62px, 0);
+    clip: rect(89px, 9999px, 79px, 0);
   }
   85% {
-    clip: rect(8px, 9999px, 76px, 0);
+    clip: rect(81px, 9999px, 52px, 0);
   }
   90% {
-    clip: rect(63px, 9999px, 38px, 0);
+    clip: rect(77px, 9999px, 14px, 0);
   }
   95% {
-    clip: rect(8px, 9999px, 68px, 0);
+    clip: rect(20px, 9999px, 86px, 0);
   }
   100% {
-    clip: rect(35px, 9999px, 27px, 0);
+    clip: rect(43px, 9999px, 84px, 0);
   }
 }
 
 @keyframes noise-anim {
   0% {
-    clip: rect(11px, 9999px, 32px, 0);
+    clip: rect(37px, 9999px, 6px, 0);
   }
   5% {
-    clip: rect(48px, 9999px, 15px, 0);
+    clip: rect(50px, 9999px, 10px, 0);
   }
   10% {
-    clip: rect(89px, 9999px, 61px, 0);
+    clip: rect(32px, 9999px, 14px, 0);
   }
   15% {
-    clip: rect(87px, 9999px, 46px, 0);
+    clip: rect(71px, 9999px, 89px, 0);
   }
   20% {
-    clip: rect(96px, 9999px, 30px, 0);
+    clip: rect(31px, 9999px, 49px, 0);
   }
   25% {
-    clip: rect(89px, 9999px, 19px, 0);
+    clip: rect(43px, 9999px, 43px, 0);
   }
   30% {
-    clip: rect(6px, 9999px, 16px, 0);
+    clip: rect(45px, 9999px, 74px, 0);
   }
   35% {
-    clip: rect(30px, 9999px, 31px, 0);
+    clip: rect(28px, 9999px, 98px, 0);
   }
   40% {
-    clip: rect(88px, 9999px, 57px, 0);
+    clip: rect(89px, 9999px, 50px, 0);
   }
   45% {
-    clip: rect(95px, 9999px, 33px, 0);
+    clip: rect(78px, 9999px, 28px, 0);
   }
   50% {
-    clip: rect(93px, 9999px, 57px, 0);
+    clip: rect(16px, 9999px, 3px, 0);
   }
   55% {
-    clip: rect(56px, 9999px, 47px, 0);
+    clip: rect(87px, 9999px, 90px, 0);
   }
   60% {
-    clip: rect(100px, 9999px, 92px, 0);
+    clip: rect(64px, 9999px, 19px, 0);
   }
   65% {
-    clip: rect(88px, 9999px, 16px, 0);
+    clip: rect(60px, 9999px, 53px, 0);
   }
   70% {
-    clip: rect(46px, 9999px, 3px, 0);
+    clip: rect(23px, 9999px, 51px, 0);
   }
   75% {
-    clip: rect(99px, 9999px, 40px, 0);
+    clip: rect(43px, 9999px, 61px, 0);
   }
   80% {
-    clip: rect(9px, 9999px, 62px, 0);
+    clip: rect(89px, 9999px, 79px, 0);
   }
   85% {
-    clip: rect(8px, 9999px, 76px, 0);
+    clip: rect(81px, 9999px, 52px, 0);
   }
   90% {
-    clip: rect(63px, 9999px, 38px, 0);
+    clip: rect(77px, 9999px, 14px, 0);
   }
   95% {
-    clip: rect(8px, 9999px, 68px, 0);
+    clip: rect(20px, 9999px, 86px, 0);
   }
   100% {
-    clip: rect(35px, 9999px, 27px, 0);
+    clip: rect(43px, 9999px, 84px, 0);
   }
 }
 
@@ -13493,133 +13492,133 @@ form.user .btn-user {
 
 @-webkit-keyframes noise-anim-2 {
   0% {
-    clip: rect(31px, 9999px, 33px, 0);
+    clip: rect(42px, 9999px, 64px, 0);
   }
   5% {
-    clip: rect(44px, 9999px, 21px, 0);
+    clip: rect(77px, 9999px, 82px, 0);
   }
   10% {
-    clip: rect(47px, 9999px, 91px, 0);
+    clip: rect(83px, 9999px, 86px, 0);
   }
   15% {
-    clip: rect(11px, 9999px, 97px, 0);
+    clip: rect(76px, 9999px, 49px, 0);
   }
   20% {
-    clip: rect(33px, 9999px, 43px, 0);
+    clip: rect(20px, 9999px, 59px, 0);
   }
   25% {
-    clip: rect(61px, 9999px, 29px, 0);
+    clip: rect(32px, 9999px, 92px, 0);
   }
   30% {
-    clip: rect(97px, 9999px, 2px, 0);
+    clip: rect(36px, 9999px, 74px, 0);
   }
   35% {
-    clip: rect(9px, 9999px, 19px, 0);
+    clip: rect(50px, 9999px, 10px, 0);
   }
   40% {
-    clip: rect(77px, 9999px, 71px, 0);
+    clip: rect(86px, 9999px, 85px, 0);
   }
   45% {
-    clip: rect(6px, 9999px, 94px, 0);
+    clip: rect(69px, 9999px, 61px, 0);
   }
   50% {
-    clip: rect(35px, 9999px, 34px, 0);
+    clip: rect(97px, 9999px, 49px, 0);
   }
   55% {
-    clip: rect(85px, 9999px, 70px, 0);
+    clip: rect(42px, 9999px, 7px, 0);
   }
   60% {
-    clip: rect(45px, 9999px, 9px, 0);
+    clip: rect(42px, 9999px, 32px, 0);
   }
   65% {
-    clip: rect(7px, 9999px, 54px, 0);
+    clip: rect(13px, 9999px, 49px, 0);
   }
   70% {
-    clip: rect(8px, 9999px, 93px, 0);
+    clip: rect(70px, 9999px, 14px, 0);
   }
   75% {
-    clip: rect(12px, 9999px, 17px, 0);
+    clip: rect(74px, 9999px, 96px, 0);
   }
   80% {
-    clip: rect(25px, 9999px, 24px, 0);
+    clip: rect(39px, 9999px, 39px, 0);
   }
   85% {
-    clip: rect(84px, 9999px, 78px, 0);
+    clip: rect(44px, 9999px, 70px, 0);
   }
   90% {
-    clip: rect(63px, 9999px, 85px, 0);
+    clip: rect(33px, 9999px, 36px, 0);
   }
   95% {
-    clip: rect(5px, 9999px, 61px, 0);
+    clip: rect(66px, 9999px, 12px, 0);
   }
   100% {
-    clip: rect(96px, 9999px, 88px, 0);
+    clip: rect(48px, 9999px, 36px, 0);
   }
 }
 
 @keyframes noise-anim-2 {
   0% {
-    clip: rect(31px, 9999px, 33px, 0);
+    clip: rect(42px, 9999px, 64px, 0);
   }
   5% {
-    clip: rect(44px, 9999px, 21px, 0);
+    clip: rect(77px, 9999px, 82px, 0);
   }
   10% {
-    clip: rect(47px, 9999px, 91px, 0);
+    clip: rect(83px, 9999px, 86px, 0);
   }
   15% {
-    clip: rect(11px, 9999px, 97px, 0);
+    clip: rect(76px, 9999px, 49px, 0);
   }
   20% {
-    clip: rect(33px, 9999px, 43px, 0);
+    clip: rect(20px, 9999px, 59px, 0);
   }
   25% {
-    clip: rect(61px, 9999px, 29px, 0);
+    clip: rect(32px, 9999px, 92px, 0);
   }
   30% {
-    clip: rect(97px, 9999px, 2px, 0);
+    clip: rect(36px, 9999px, 74px, 0);
   }
   35% {
-    clip: rect(9px, 9999px, 19px, 0);
+    clip: rect(50px, 9999px, 10px, 0);
   }
   40% {
-    clip: rect(77px, 9999px, 71px, 0);
+    clip: rect(86px, 9999px, 85px, 0);
   }
   45% {
-    clip: rect(6px, 9999px, 94px, 0);
+    clip: rect(69px, 9999px, 61px, 0);
   }
   50% {
-    clip: rect(35px, 9999px, 34px, 0);
+    clip: rect(97px, 9999px, 49px, 0);
   }
   55% {
-    clip: rect(85px, 9999px, 70px, 0);
+    clip: rect(42px, 9999px, 7px, 0);
   }
   60% {
-    clip: rect(45px, 9999px, 9px, 0);
+    clip: rect(42px, 9999px, 32px, 0);
   }
   65% {
-    clip: rect(7px, 9999px, 54px, 0);
+    clip: rect(13px, 9999px, 49px, 0);
   }
   70% {
-    clip: rect(8px, 9999px, 93px, 0);
+    clip: rect(70px, 9999px, 14px, 0);
   }
   75% {
-    clip: rect(12px, 9999px, 17px, 0);
+    clip: rect(74px, 9999px, 96px, 0);
   }
   80% {
-    clip: rect(25px, 9999px, 24px, 0);
+    clip: rect(39px, 9999px, 39px, 0);
   }
   85% {
-    clip: rect(84px, 9999px, 78px, 0);
+    clip: rect(44px, 9999px, 70px, 0);
   }
   90% {
-    clip: rect(63px, 9999px, 85px, 0);
+    clip: rect(33px, 9999px, 36px, 0);
   }
   95% {
-    clip: rect(5px, 9999px, 61px, 0);
+    clip: rect(66px, 9999px, 12px, 0);
   }
   100% {
-    clip: rect(96px, 9999px, 88px, 0);
+    clip: rect(48px, 9999px, 36px, 0);
   }
 }
 
@@ -13649,4 +13648,254 @@ footer.sticky-footer .copyright {
 
 body.sidebar-toggled footer.sticky-footer {
   width: 100%;
+}
+
+.card-profile {
+  padding-top: 20px;
+  margin: 10px 0 20px 0;
+  background-color: rgba(214, 224, 226, 0.2);
+  border-top-width: 0;
+  border-bottom-width: 2px;
+  border-radius: 3px;
+  -webkit-box-shadow: none;
+  box-shadow: none;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+}
+
+.card-profile .card-heading {
+  padding: 0 20px;
+  margin: 0;
+}
+
+.card-profile .card-heading.simple {
+  font-size: 20px;
+  font-weight: 300;
+  color: #777;
+  border-bottom: 1px solid #e5e5e5;
+}
+
+.card-profile .card-heading.image img {
+  display: inline-block;
+  width: 46px;
+  height: 46px;
+  margin-right: 15px;
+  vertical-align: top;
+  border: 0;
+  border-radius: 50%;
+}
+
+.card-profile .card-heading.image .card-heading-header {
+  display: inline-block;
+  vertical-align: top;
+}
+
+.card-profile .card-heading.image .card-heading-header h3 {
+  margin: 0;
+  font-size: 14px;
+  line-height: 16px;
+  color: #262626;
+}
+
+.card-profile .card-heading.image .card-heading-header span {
+  font-size: 12px;
+  color: #999999;
+}
+
+.card-profile .card-body {
+  padding: 0 20px;
+  margin-top: 20px;
+}
+
+.card-profile .card-media {
+  padding: 0 20px;
+  margin: 0 -14px;
+}
+
+.card-profile .card-media img {
+  max-width: 100%;
+  max-height: 100%;
+}
+
+.card-profile .card-actions {
+  min-height: 30px;
+  padding: 0 20px 20px 20px;
+  margin: 20px 0 0 0;
+}
+
+.card-profile .card-comments {
+  padding: 20px;
+  margin: 0;
+  background-color: #f8f8f8;
+}
+
+.card-profile .card-comments .comments-collapse-toggle {
+  padding: 0;
+  margin: 0 20px 12px 20px;
+}
+
+.card-profile .card-comments .comments-collapse-toggle a {
+  padding-right: 5px;
+  overflow: hidden;
+  font-size: 12px;
+  color: #999;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+
+.card-profile .card-comments .comments-collapse-toggle span {
+  padding-right: 5px;
+  overflow: hidden;
+  font-size: 12px;
+  color: #999;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+
+.card-comments .media-heading {
+  font-size: 13px;
+  font-weight: bold;
+}
+
+.card.people {
+  position: relative;
+  display: inline-block;
+  width: 170px;
+  height: 300px;
+  padding-top: 0;
+  margin-left: 20px;
+  overflow: hidden;
+  vertical-align: top;
+}
+
+.card.people:first-child {
+  margin-left: 0;
+}
+
+.card.people .card-top {
+  position: absolute;
+  top: 0;
+  left: 0;
+  display: inline-block;
+  width: 170px;
+  height: 150px;
+  background-color: #ffffff;
+}
+
+.card.people .card-top.green {
+  background-color: #53a93f;
+}
+
+.card.people .card-top.blue {
+  background-color: #427fed;
+}
+
+.card.people .card-info {
+  position: absolute;
+  top: 150px;
+  display: inline-block;
+  width: 100%;
+  height: 101px;
+  overflow: hidden;
+  background: #ffffff;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+}
+
+.card.people .card-info .title {
+  display: block;
+  margin: 8px 14px 0 14px;
+  overflow: hidden;
+  font-size: 16px;
+  font-weight: bold;
+  line-height: 18px;
+  color: #404040;
+}
+
+.card.people .card-info .desc {
+  display: block;
+  margin: 8px 14px 0 14px;
+  overflow: hidden;
+  font-size: 12px;
+  line-height: 16px;
+  color: #737373;
+  text-overflow: ellipsis;
+}
+
+.card.people .card-bottom {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  display: inline-block;
+  width: 100%;
+  padding: 10px 20px;
+  line-height: 29px;
+  text-align: center;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+}
+
+.card.hovercard {
+  position: relative;
+  padding-top: 0;
+  overflow: hidden;
+  text-align: center;
+  background-color: rgba(214, 224, 226, 0.2);
+}
+
+.card.hovercard .cardheader {
+  background: url("http://lorempixel.com/850/280/nature/4/");
+  background-size: cover;
+  height: 135px;
+}
+
+.card.hovercard .avatar {
+  position: relative;
+  top: -50px;
+  margin-bottom: -50px;
+}
+
+.card.hovercard .avatar img {
+  width: 100px;
+  height: 100px;
+  max-width: 100px;
+  max-height: 100px;
+  border-radius: 50%;
+  border: 5px solid rgba(255, 255, 255, 0.5);
+}
+
+.card.hovercard .info {
+  padding: 4px 8px 10px;
+}
+
+.card.hovercard .info .title {
+  margin-bottom: 4px;
+  font-size: 24px;
+  line-height: 1;
+  color: #262626;
+  vertical-align: middle;
+}
+
+.card.hovercard .info .desc {
+  overflow: hidden;
+  font-size: 12px;
+  line-height: 20px;
+  color: #737373;
+  text-overflow: ellipsis;
+}
+
+.card.hovercard .bottom {
+  padding: 0 20px;
+  margin-bottom: 17px;
+}
+
+.card.hovercard .bottom i {
+  vertical-align: sub;
+}
+
+.btn {
+  border-radius: 50%;
+  width: 32px;
+  height: 32px;
+  line-height: 18px;
 }
